# k-iter

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
.github/: dependabot.yml
src/: cli.rs  error.rs  kinesis.rs  main.rs  printer.rs
