[package]
name = "k-iter"
version = "0.4.1"
authors = ["ROki1988 <roki.swindler@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.31.2"
rusoto_core = "0.45.0"
rusoto_kinesis = "0.45.0"
ctrlc = { version = "3.0", features = ["termination"] }
serde = "1.0.2"
anyhow = "1.0.35"
serde_derive = "1.0.104"
serde_json = "1.0.47"
bytes = { version = "0.5.4", features = ["serde"] }
futures = "0.3.4"
tokio = {version = "1.8.1", features = ["full"], default-features = false}
async-stream = "0.3.0"